# journal_ai

./: pyproject.toml
backend/: .env  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: block_routes.py  journal_router.py  routers.py  user_router.py
backend/app/db/: base.py  initdb.py
backend/app/db/crud/: block_crud.py  journal_page_crud.py  user_crud.py
backend/app/db/models/: block.py  journal_page.py  users.py
backend/app/schemas/: block.py  journal_page.py  user.py
db/: initdb.py
db/models/: block.py  journal_page.py  users.py
