[project]
name = "journal-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.4.0"
]

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F", "N"]
line-length = 88
target-version = "py311"
exclude = ["tests", "migrations", "__pycache__"]

[tool.isort]
profile = "black"
